having trouble with user auth still, but started styling

--- a/app/assets/stylesheets/splash/splash_func.scss
+++ b/app/assets/stylesheets/splash/splash_func.scss
@@ -1,3 +1,15 @@
 body {
     background-color: #F4F1EA; 
 }
+
+.interactive-buttons {
+    border: solid #000 10px; 
+    padding: 50px; 
+    background-color: #FFF;
+    justify-content: left;
+    width: 100px; 
+}
+
+.choice-awards {
+    background-color: rgb(50,54,45);
+}
