--- a/app/assets/stylesheets/splash/splash_func.scss
+++ b/app/assets/stylesheets/splash/splash_func.scss
@@ -53,20 +53,50 @@
     height: 300px; 
 }
 
+.mid-horizontal {
+    flex-wrap: wrap;
+    flex-direction: row;
+    border: solid orange 10px; 
+    display: flex; 
+    justify-content: space-between;
+    font-size: 20px; 
+}
+
+.next-friend {
+    width: 300px; 
+}
+
+.friends-friending {
+    width: 300px; 
+}
+
+.bottom-horizontal {
+    flex-wrap: wrap;
+    flex-direction: row;
+    border: solid yellow 10px; 
+    display: flex; 
+    justify-content: space-between;
+}
+
 .discover {
     background-color: rgb(244,242,233); 
-    height: 50px; 
-    font-size: 30px; 
+    width: 500px;  
+    font-size: 25px; 
 }
 
 .love-lists {
-    font-size: 30px; 
+    font-size: 25px; 
+    width: 300px; 
+}
+
+.quote {
+    border: dotted blue 5px;  
 }
 
 .footer {
     background-color: #F4F1EA; 
-    height: 100px; 
     border: solid red 5px;
+    font-size: 25px; 
 }
 
 .socials {
