--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script>
+      window.gdby_logo = '<%= image_url('gdby_logo.png') %>'
+    </script>
+
   </head>
 
   <body>
