--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -1,5 +1,3 @@
-// this whole file may be unnecessary, maybe delete later, for now we keep to be safe. ty
-
 .signup-body {
     justify-content: center;
     background-color: #F4F1EA; 
@@ -26,26 +24,21 @@
     border-radius: 5px;
     height: 120%; 
     width: 500px; 
-    text-align: center; 
     margin: auto; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .input {
     padding: 10px; 
-    padding-left: 100px; 
-    padding-right: 100px; 
     font-size: 12px; 
     text-align: left;
 }
 
-.input-box {
-    height: 50px; 
-    text-align: center;
-}
-
 .input input {
     border: grey 1px solid; 
-    width: 100%; 
     padding: 10px; 
     margin: 10px; 
     border-radius: 4px;
