--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -3,6 +3,7 @@
     background-color: #F4F1EA; 
     font-family: 'Source Sans 3', sans-serif;
     padding: 10px; 
+    display: flex; 
 }
 
 .signup-body h2 {
@@ -25,6 +26,7 @@
     height: 120%; 
     width: 500px; 
     margin: auto; 
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,7 +36,6 @@
 .input {
     padding: 10px; 
     font-size: 12px; 
-    text-align: left;
 }
 
 .input input {
