thins aligned finall

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,4 @@
 @import"./reset.scss"; 
 @import"./splash/splash_func.scss"; 
 @import"./login.scss"; 
-@import"./signup.scss"; 
+// @import"./signup.scss"; 
