--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -33,28 +33,28 @@
     justify-content: center;
 }
 
-.input {
-    padding: 10px; 
-    font-size: 12px; 
-}
+// .input {
+//     padding: 10px; 
+//     font-size: 12px; 
+// }
 
-.input input {
-    border: grey 1px solid; 
-    padding: 10px; 
-    margin: 10px; 
-    border-radius: 4px;
-}
+// .input input {
+//     border: grey 1px solid; 
+//     padding: 10px; 
+//     margin: 10px; 
+//     border-radius: 4px;
+// }
 
-.signup-buttons {
-    background-color: #F4F1EA;
-    color: #382110; 
-    font-size: 14px; 
-    padding: 14px; 
-    border-radius: 5px; 
-    width: 250px; 
-    border: 1px solid #D6D0C4; 
-    margin: 10px;  
-}
+// .signup-buttons {
+//     background-color: #F4F1EA;
+//     color: #382110; 
+//     font-size: 14px; 
+//     padding: 14px; 
+//     border-radius: 5px; 
+//     width: 250px; 
+//     border: 1px solid #D6D0C4; 
+//     margin: 10px;  
+// }
 
 .already-text {
     padding: 10px; 
