just finished thunk for relationships, going to walk the boys

--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -1,3 +1,5 @@
+// this whole file may be unnecessary, maybe delete later, for now we keep to be safe. ty
+
 .signup-body {
     justify-content: center;
     background-color: #F4F1EA; 
