--- a/app/assets/stylesheets/splash/splash_func.scss
+++ b/app/assets/stylesheets/splash/splash_func.scss
@@ -2,17 +2,7 @@
 .body {
     background-color: #F4F1EA; 
     // font-family: 'Spline Sans', sans-serif;
-    font-family: 'Source Sans 3', sans-serif;
-}
-
-.header {
-    background-color: #F4F1EA; 
-    height: 60px; 
-}
-
-.header img {
-    max-width:100%;
-    height:auto;
+    font-family: 'Lato', sans-serif;
 }
 
 .column {
@@ -34,7 +24,6 @@
     padding-top: 60px; 
     color: rgb(50,54,45); 
 }
-
 
 .horizontal {
     flex-wrap: wrap;
@@ -164,44 +153,3 @@
     height: 50px; 
     padding: 20px; 
 }
-
-.footer {
-    background-color: #ceccc9; 
-    font-size: 20px; 
-    display: flex; 
-    flex-direction: row;
-    padding: 10px; 
-    padding-top: 20px; 
-}
-
-.footer-company {
-    padding-left: 10px; 
-    width: 300px; 
-}
-
-.footer-work {
-    width: 300px;
-}
-
-.footer-connect {
-    width: 300px
-}
-
-.socials {
-    display: flex; 
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 10px;
-    border-radius: 20px;
-    font-size: 36px; 
-}
-
-.fa {
-    padding: 10px;
-    width: 40px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 10px; 
-    color: rgb(50,54,45);
-    border: solid rgb(50,54,45) 2px;
-  }
