--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
     <script>
       window.gdby_logo = '<%= image_url('gdby_logo.png') %>'
+      window.dog_photo = '<%= image_url('miz.png') %>' 
     </script>
 
   </head>
