--- a/app/assets/stylesheets/relationship.scss
+++ b/app/assets/stylesheets/relationship.scss
@@ -2,9 +2,9 @@
 
 .main-body {
     font-family: 'Lato', sans-serif;
-    // display: flex; 
+    display: flex; 
     flex-direction: column;
-    display: inline-flex; 
+    // display: inline-flex; 
     justify-content: space-evenly;
     width: 100vw;
 }
@@ -17,12 +17,13 @@
     padding-bottom: 10px; 
 }
 
-.ship_list h1 {
+.ship_list a {
     font-size: 19px;
     margin-bottom: 8px;
     font-weight: bolder; 
-    // border: red 1px solid; 
-    // text-decoration: none;
+    border: red 1px solid; 
+    text-decoration: none;
+    //Links are a tags under the hood
 }
 
 .ship_list h2 {
@@ -37,7 +38,6 @@
 
 
 .ship_list_item {
-    height: 400px; 
     width: 700px; 
     margin-left: 150px; 
 }
