--- a/app/assets/stylesheets/relationship.scss
+++ b/app/assets/stylesheets/relationship.scss
@@ -21,7 +21,7 @@
     font-size: 19px;
     margin-bottom: 8px;
     font-weight: bolder; 
-    border: red 1px solid; 
+    // border: red 1px solid; 
     text-decoration: none;
     //Links are a tags under the hood
 }
