--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,15 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
 
+
+
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐕</text></svg>">
+
+
     <script>
       window.gdby_logo = '<%= image_url('gdby_logo.png') %>'
       window.dog_photo = '<%= image_url('miz.png') %>' 
+      window.bookshelf = `<%= image_url('bookshelf.png') %>`
     </script>
 
   </head>
