--- a/app/assets/stylesheets/splash/splash_func.scss
+++ b/app/assets/stylesheets/splash/splash_func.scss
@@ -11,6 +11,13 @@
     padding-top: 50px;
 }
 
+.header-logo {
+    background-color: #F4F1EA; 
+    height: 60px; 
+    display: flex; 
+
+}
+
 .left-col {
     width: 1000px; 
 }
@@ -35,6 +42,15 @@
     height: 300px; 
 }
 
+// .horizontal-background {
+//     background-color: rgb(50,54,45);
+//     height: 300px; 
+//     width: 100vw; 
+//     z-index: -1;
+//     position: absolute;
+//     left: 0px;
+//     top: 0px; 
+// }
 .choice-awards-book-text {
     font-size: 40px; 
     background: rgb(236,188,108);
