added footer and header to user show

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -95,8 +95,8 @@
 .bookshelf-footer {
     max-width: 100%;
     height: 70px; 
-    border: red 2px solid; 
-    background-image: url("bookshelf.png")
+    // border: red 2px solid; 
+    background-image: url("https://github.com/AnnaYTH/goodBoys/blob/main/app/assets/images/bookshelf.png")
 }
 
 // .bookshelf-footer {
