had some weird borders on my log in page

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -60,7 +60,6 @@
     width: 250px; 
     border: 1px solid #D6D0C4; 
     margin: 10px;  
-    border: green solid 2px; 
 }
 
 .already-text {
@@ -70,7 +69,7 @@
 }
 
 .redirect a {
-    border: red solid 1px; 
+    // border: red solid 1px; 
     background-color: #F4F1EA;
     color: #382110; 
     font-size: 14px; 
