--- a/app/assets/stylesheets/relationship.scss
+++ b/app/assets/stylesheets/relationship.scss
@@ -10,7 +10,7 @@
 }
 
 .title_head {
-    font-family: 'Merriweather', serif;
+    // font-family: 'Merriweather', serif;
     font-size: 24px; 
     font-weight: bolder;
     margin: 20px; 
