users show page now shows their reviews, added a all reviews page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,5 @@
 @import"./relationship.scss"; 
 @import"./ship.scss"; 
 @import"./profile.scss"; 
+@import"./reviews/user_reviews.scss";
+@import"./reviews/all_reviews.scss"; 
