reviews now render on a ship page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,18 @@
       window.bookshelf = `<%= image_url('bookshelf.png') %>`
     </script>
 
+
+
+    <% if logged_in? %>
+      <script type= "text/javascript">
+        window.currentUser = <%= render(
+          "api/users/user.json.jbuilder",
+          user: current_user
+        ).html_safe%>
+      </script>
+    <% end %>
+
+
   </head>
 
   <body>
