--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,8 +22,8 @@
 @import"./header.scss"; 
 @import"./footer.scss"; 
 @import"./login.scss"; 
-@import"./relationship.scss"; 
-@import"./ship.scss"; 
+@import"./relationships/relationship.scss"; 
+@import"./relationships/ship.scss"; 
 @import"./profile.scss"; 
 @import"./reviews/user_reviews.scss";
 @import"./reviews/all_reviews.scss"; 
