--- a/app/assets/stylesheets/relationships/ship.scss
+++ b/app/assets/stylesheets/relationships/ship.scss
@@ -7,21 +7,23 @@
 .ship_horizontal {
     display: flex;
     flex-direction: horizontal;
+    margin-top: 20px; 
+    margin-bottom: 20px; 
 }
 .ship_col1 {
     margin-left: 50px; 
 }
 
 .ship_profile_image {
-    border: 1px blue solid; 
+    // border: 1px blue solid; 
     height: 300px; 
-    width: 200px; 
-    box-shadow: 5px 5px 4px #888888;
+    width: 400px; 
 }
 
 .ship_profile_image img {
     max-width:100%;
     height:auto;
+    box-shadow: 5px 5px 4px #888888;
 }
 
 .ship_col2 {
