--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,5 @@
 @import"./profile.scss"; 
 @import"./reviews/user_reviews.scss";
 @import"./reviews/all_reviews.scss"; 
+@import"./reviews/create_review.scss"; 
+@import"./reviews/one_review_show.scss"; 
