--- a/app/assets/stylesheets/reviews/one_review_show.scss
+++ b/app/assets/stylesheets/reviews/one_review_show.scss
@@ -6,7 +6,13 @@
     border: none; 
     font-size: 12px; 
     // display: flex; 
-    // flex-direction: row;
-    // justify-content: center;
+    // flex-direction: column;
+    // border: solid red 1px; 
+    justify-content: start; 
 }
+
+.review-options {
+    margin-top: 43px; 
+    // width: 400px; 
+}   
 
