--- a/app/assets/stylesheets/reviews/create_review.scss
+++ b/app/assets/stylesheets/reviews/create_review.scss
@@ -10,30 +10,42 @@
     line-height: 150%;
 }
 
-.review-header {
+.create-review-header {
     font-size: 20px; 
     font-weight: bolder; 
     margin-bottom: 25px; 
 }
 
-.review-bottom {
+
+.create-review-middle {
+    display:flex; 
+    flex-direction: row; 
+}
+
+.image-create {
+    height: 100px; 
+    width: 150px; 
+    margin-bottom: 10px; 
+    margin-right: 30px;
+}
+
+.create-review-middle-right h1 {
+    font-weight: bolder; 
+    font-size: 17px; 
+}
+
+.create-review-middle-right h2 {
+    font-size: 14px; 
+}
+
+.create-review-bottom {
+    font-family: Arial, Helvetica, sans-serif; 
+}
+
+.review-rating {
     display: flex; 
     flex-direction: row; 
-    justify-content: center;
-    margin-top: 20px; 
-}
-
-.review-bottom > * {
-    margin-right: 50px; 
-    // border: red solid 1px; 
-}
-
-.review-right-col > h1 {
-    font-weight: bolder; 
-    font-size: 14.4px; 
-    margin-top: 43px; 
-}
-
-.review-right-col > h2 {
-    font-size: 12px; 
+    flex-wrap: wrap;
+    font-size: 14px; 
+    font-family: Arial, Helvetica, sans-serif;
 }
