--- a/app/assets/stylesheets/reviews/one_review_show.scss
+++ b/app/assets/stylesheets/reviews/one_review_show.scss
@@ -17,3 +17,32 @@
 }   
 
  
+.review-bottom {
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center;
+    margin-top: 20px; 
+}
+
+.review-bottom > * {
+    margin-right: 50px; 
+    // border: red solid 1px; 
+}
+
+.review-right-col > h1 {
+    font-weight: bolder; 
+    font-size: 14.4px; 
+    margin-top: 43px; 
+}
+
+.review-right-col > h2 {
+    font-size: 12px; 
+}
+
+// .review-rating {
+//     display: flex; 
+//     flex-direction: row; 
+//     flex-wrap: wrap;
+//     font-size: 14px; 
+//     font-family: Arial, Helvetica, sans-serif;
+// }
