edit review styling now

--- a/app/assets/stylesheets/relationships/ship.scss
+++ b/app/assets/stylesheets/relationships/ship.scss
@@ -27,8 +27,9 @@
 }
 
 .ship_col2 {
-    border: 2px gold solid; 
+    // border: 2px gold solid; 
     margin-left: 30px; 
+    width: 500px; 
 }
 
 .ship_col2 h1 {
