edit review styling done

--- a/app/assets/stylesheets/reviews/create_review.scss
+++ b/app/assets/stylesheets/reviews/create_review.scss
@@ -1,5 +1,5 @@
 // frontend/reviews/create_reviews
-
+// also edit review
 .review-body {
     font-family: Georgia, 'Times New Roman', Times, serif; 
     margin: 25px 50px; 
@@ -70,4 +70,5 @@
     border: solid 1px lightgray;
     padding: 8px 12px; 
     border-radius: 3px; 
+    margin: 5px 5px 5px 0px;
 }
