search box hides when not in use

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,5 @@
 @import"./reviews/all_reviews.scss"; 
 @import"./reviews/create_review.scss"; 
 @import"./reviews/one_review_show.scss"; 
+@import"./relationships/friend.scss"; 
+@import"./search.scss"; 
