--- a/app/assets/stylesheets/relationships/relationship.scss
+++ b/app/assets/stylesheets/relationships/relationship.scss
@@ -15,6 +15,7 @@
     font-weight: bolder;
     margin: 20px; 
     padding-bottom: 10px; 
+    font-family: 'Lato', sans-serif;
 }
 
 .ship_list a {
