error messages in red

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -98,9 +98,7 @@
     background-image: url("https://github.com/AnnaYTH/goodBoys/blob/main/app/assets/images/bookshelf.png")
 }
 
-// .bookshelf-footer {
-//     // max-width:100%;
-//     // border: red 2px solid; 
-//     background-repeat: repeat-x;
-//     background: url("bookshelf.png")
-// }
+.error-messages {
+    color: red; 
+    font-weight: bolder; 
+}
