ended css reset file to make all functionality change the pointer to a cursor on hover

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -46,3 +46,19 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+
+
+
+
+button {
+	cursor: pointer; 
+}
+input {
+	cursor: pointer; 
+}
+* > a {
+	cursor: pointer;
+}
+
