cleaning us styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,4 @@
 @import"./reviews/one_review_show.scss"; 
 @import"./relationships/friend.scss"; 
 @import"./search.scss"; 
+@import"./reviews/ship_review.scss"; 
