--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,18 @@
   <head>
     <title>GoodBoys</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <meta property="og:title" content="goodBoys" />
+    <meta property='og:image' content="<%= image_url('gdby_logo.png') %>"/>
+    <meta property="og:description"
+      content="goodBoys is a fullstack mock of Amazon's GoodReads, a website to rate and review past relationships"
+    />
+    <meta property="og:url"
+      content="https://splitzies.herokuapp.com/#/"
+    />
+
+
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
