--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <meta property="og:title" content="goodBoys" />
-    <meta property='og:image' content="<%= image_url('gdby_logo.png') %>"/>
+    <meta property='og:image' content="<%= image_url('good_boys.png') %>"/>
     <meta property="og:description"
       content="goodBoys is a fullstack mock of Amazon's GoodReads, a website to rate and review past relationships"
     />
