--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <meta property="og:title" content="goodBoys" />
-    <meta property='og:image' content="<%= image_url('good_boys.png') %>"/>
+    <meta property='og:image' content="<%= image_url('good_boys.jpg') %>"/>
     <meta property="og:description"
       content="goodBoys is a fullstack mock of Amazon's GoodReads, a website to rate and review past relationships"
     />
@@ -24,7 +24,7 @@
 
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐕</text></svg>">
-
+    <script src="https://kit.fontawesome.com/ec31de90bb.js" crossorigin="anonymous"></script>
 
     <script>
       window.gdby_logo = '<%= image_url('gdby_logo.png') %>'
