--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,25 +1,24 @@
-// .search-body {
-//     // height: 25px; 
-//     // width: 250px; 
-//     // border: solid red 1px; 
-
-// }
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
 
 .search-bar-input {
-    // border: solid 1px green; 
     height: 25px; 
-    width: 250px; 
+    width: 300px; 
     margin-top: 13px; 
-    // position: absolute; 
-    // z-index: 2; 
     background-color: white;
+    border-radius: 5px; 
 }
 
 .search-result-body {
-    // border: solid 1px yellowgreen; 
-    height: 300px; 
+    height: 400px; 
     overflow-y: scroll;
     background-color: white;
+    border-right: 1px groove #F4F1EA; 
+    border-left: 1px groove #F4F1EA; 
+    border-bottom: 1px groove #F4F1EA; 
+    border-radius: 5px; 
 }
 
 .search-result-body-hidden {
@@ -27,21 +26,18 @@
 }
 
 .search-result-ship {
-    // border: red solid 1px; 
     padding-top: 10px; 
     padding-bottom: 10px; 
-    width: 250px; 
+    width: 300px; 
 }
 
 .search-result-ship:hover {
-    // border: solid blue 1px; 
     background-color: #F4F1EA;
     color: #F4F1EA; 
 }
 
 .search-result-ship a {
     width: 250px; 
-    // border: pink 1px solid; 
 }
 
 .search-result-ship a:hover {
