--- a/app/assets/stylesheets/splash/splash_func.scss
+++ b/app/assets/stylesheets/splash/splash_func.scss
@@ -30,11 +30,6 @@
     height: 300px; 
 }
 
-.right-right-col {
-    padding-top: 60px; 
-    color: rgb(50,54,45); 
-}
-
 .horizontal {
     flex-wrap: wrap;
     flex-direction: row;
@@ -127,6 +122,7 @@
     padding: 3px;
     line-height: 18px; 
     margin-left: 7vw; 
+    min-height: 15vw
 }
 
 .next-friend {
