--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -5,8 +5,8 @@
     background-color: #F4F1EA; 
     font-family: 'Source Sans 3', sans-serif;
     padding: 10px; 
-    // line-height: 110%; 
     height: 600px; 
+    padding-bottom: 60px; 
 }
 
 .signup-body h2 {
@@ -24,9 +24,7 @@
     background-color: #FFF; 
     border: 1px solid grey; 
     border-radius: 5px;
-    // height: 120%; 
     width: 500px; 
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,13 +34,7 @@
 .input {
     padding: 10px; 
     font-size: 12px; 
-    // text-align: left;
 }
-
-// .input-box {
-//     height: 50px; 
-//     text-align: center;
-// }
 
 .input input {
     border: grey 1px solid; 
@@ -69,7 +61,6 @@
 }
 
 .redirect a {
-    // border: red solid 1px; 
     background-color: #F4F1EA;
     color: #382110; 
     font-size: 14px; 
@@ -77,7 +68,6 @@
     border-radius: 5px; 
     width: 250px; 
     border: 1px solid #D6D0C4; 
-    // margin: 10px;  
     text-decoration: none;
     margin-top: 20px; 
     margin-left: 40px; 
@@ -89,13 +79,6 @@
     padding: 10px; 
     padding-top: 30px; 
     margin: 10px; 
-}
-
-.bookshelf-footer {
-    max-width: 100%;
-    height: 70px; 
-    // border: red 2px solid; 
-    background-image: url("https://github.com/AnnaYTH/goodBoys/blob/main/app/assets/images/bookshelf.png")
 }
 
 .error-messages {
