--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -3,7 +3,7 @@
     height: 60px; 
     display: flex; 
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     font-family: 'Lato', sans-serif;
     font-size: 18px; 
 }
@@ -11,6 +11,7 @@
 .header img {
     max-width:100%;
     height:auto;
+    margin-left: 50px; 
 }
 
 .header a {
@@ -23,4 +24,8 @@
 .header a:hover {
     background-color: #382110;
     color: #F4F1EA; 
+}
+
+.header_profile {
+    margin-right: 50px; 
 }
