struggling to show buddies

--- a/app/assets/stylesheets/reviews/one_review_show.scss
+++ b/app/assets/stylesheets/reviews/one_review_show.scss
@@ -12,6 +12,10 @@
     margin-top: 43px; 
 }   
 
+.review-options-hidden {
+    display: none; 
+}
+
 .review-bottom {
     display: flex; 
     flex-direction: row; 
