cleaning profile css

--- a/app/assets/stylesheets/reviews/user_reviews.scss
+++ b/app/assets/stylesheets/reviews/user_reviews.scss
@@ -7,3 +7,11 @@
 .userReview a {
     text-decoration: none;
 }
+
+.userBuddy > a {
+    text-decoration: none;
+}
+
+.userBuddy {
+    padding: 20px; 
+}
