link to users friend page via reviews on the ship show page

--- a/app/assets/stylesheets/reviews/one_review_show.scss
+++ b/app/assets/stylesheets/reviews/one_review_show.scss
@@ -36,3 +36,16 @@
 .review-right-col > h2 {
     font-size: 12px; 
 }
+
+.review-right-col > a {
+    text-decoration: none;
+}
+
+.review-header {
+    margin-bottom: 15px; 
+    font-size: 20px; 
+}
+
+.review-header > a {
+    text-decoration: none;
+}
