--- a/app/assets/stylesheets/reviews/all_reviews.scss
+++ b/app/assets/stylesheets/reviews/all_reviews.scss
@@ -12,3 +12,8 @@
     color:  #382110; 
     font-weight: bolder; 
 }
+
+.recent-review-body {
+    margin-left: 50px; 
+    margin-right: 50px; 
+}
