--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
       window.gdby_logo = '<%= image_url('gdby_logo.png') %>'
       window.dog_photo = '<%= image_url('miz.png') %>' 
       window.bookshelf = `<%= image_url('bookshelf.png') %>`
+      window.nypl_logo = `<%= image_url('nypl-logo.png') %>` 
     </script>
 
 
