colored the text of all links to be the goodreads brown color

--- a/app/assets/stylesheets/reviews/one_review_show.scss
+++ b/app/assets/stylesheets/reviews/one_review_show.scss
@@ -39,6 +39,7 @@
 
 .review-right-col > a {
     text-decoration: none;
+    color: #5e564b; 
 }
 
 .review-header {
@@ -48,4 +49,5 @@
 
 .review-header > a {
     text-decoration: none;
+    color: #5e564b; 
 }
