--- a/app/assets/stylesheets/reviews/user_reviews.scss
+++ b/app/assets/stylesheets/reviews/user_reviews.scss
@@ -4,12 +4,14 @@
     padding: 20px; 
 }
 
-.userReview a {
+.userReview > a {
     text-decoration: none;
+    color: #5e564b;
 }
 
 .userBuddy > a {
     text-decoration: none;
+    color: #5e564b;
 }
 
 .userBuddy {
