--- a/app/assets/stylesheets/user_show/friend.scss
+++ b/app/assets/stylesheets/user_show/friend.scss
@@ -2,6 +2,7 @@
     margin-left: 50px; 
     margin-right: 50px; 
     font-family: 'Lato', sans-serif;
+    min-height: 25vw; 
 }
 
 .friend_name {
