--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
       content="goodBoys is a fullstack mock of Amazon's GoodReads, a website to rate and review past relationships"
     />
     <meta property="og:url"
-      content="https://splitzies.herokuapp.com/#/"
+      content="https://good-boys.herokuapp.com/#/"
     />
 
 
